# defermi-gui

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
defermi/gui/: binding_energies.py  brouwer.py  chempots.py  ctls.py  data.py  doping.py  dos.py  example.py  fermi_level.py  formation_energies.py  home.py  initialize.py  inputs.py  main.py  overview.py  requirements.txt  thermodynamics.py  utils.py
defermi/gui/cli/: main.py
defermi/gui/tests/test_files/: DA_KN.csv  DA_textbook_complete.csv  DA_textbook_reduced.csv  KN_fermidos.json
defermi_gui/: binding_energies.py  brouwer.py  ctls.py  data.py  defaults.py  doping.py  dos.py  example.py  fermi_level.py  formation_energies.py  home.py  info.py  initialize.py  overview.py  requirements.txt  thermodynamics.py
defermi_gui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
defermi_gui/presets/: test.defermi  vacancies.defermi  vacancies_interstitials.defermi  vacancies_substitutions.defermi
defermi_gui/tests/test_files/: DA_KN_reduced.csv  DA_Si.defermi  DA_SiO2.csv  DA_rachele.csv  DA_rachele_corr.csv
